fix sitemap error

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
     <title>Beerstrot | Birra Artigianale e Cibo Divino</title>
     <meta name="description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta."/>
-    <meta name="author" content="Ca' Vecchia Beerstrot" />
-    <meta name="copyright" content="Beerstrot Copyright (c) 2015" />
+    <meta name="author" content="Ca' Vecchia Beerstrot"/>
+    <meta name="copyright" content="Beerstrot Copyright (c) 2015"/>
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
     <link rel="canonical" href="http://beerstrot.it"/>
-    <link rel="stylesheet" href="http://beerstrot.it/css/app.css" />
+    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
