try fixing menu small screen

--- a/menu/index.html
+++ b/menu/index.html
@@ -42,7 +42,7 @@
 <!-- fine navbar con hamburger -->
 <!-- inizio tabbar switch-->
     <div class="row">
-        <div class="medium-12 large-12 columns extra-space-hero">
+        <div class="medium-12 large-12 small-12 columns extra-space-hero">
             <ul class="tabs" data-tab data-options="deep_linking:false; scroll_to_content:false" role="tablist">
                 <li class="tab-title active" role="presentational">
                     <a href="#menu" role="tab" tabindex="0" aria-selected="true" controls="menu">Menu</a>
@@ -62,11 +62,11 @@
 <!-- fine tabbar switch-->
 <!-- tab inizio --> 
     <div class="tabs-content" id="menupage-text"> 
-<!-- cibo--> 
+<!-- cibo --> 
         <article class="content active" role="tabpanel" aria-hidden="false" id="menu">
             <div class="panel-menu-n">
                 <div class="row">
-                    <div class="large-12 medium-12 columns">
+                    <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader ">Per Stuzzicare</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
@@ -95,7 +95,7 @@
             </div>
             <div class="panel-menu-2n">
                 <div class="row">
-                    <div class="large-12 medium-12 columns">
+                    <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Pasta Fresca</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
@@ -112,7 +112,7 @@
             </div>
             <div class="panel-menu-n">
                 <div class="row">
-                    <div class="large-12 medium-12 columns">
+                    <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Zuppe</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
@@ -129,7 +129,7 @@
             </div>
             <div class="panel-menu-2n">
                 <div class="row">
-                    <div class="large-12 medium-12 columns">
+                    <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Hamburger <br><small>Pane di nostra produzione. Servito con patate, insalata e fagioli</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
@@ -162,7 +162,7 @@
             </div>
             <div class="panel-menu-n">
                 <div class="row">
-                    <div class="large-12 medium-12 columns">
+                    <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Carni <br></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
@@ -179,7 +179,7 @@
             </div>
             <div class="panel-menu-2n">
                 <div class="row">
-                    <div class="large-12 medium-12 columns">
+                    <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Contorni</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
@@ -208,7 +208,7 @@
             </div>
             <div class="panel-menu-n">
                 <div class="row">
-                    <div class="large-12 medium-12 columns">
+                    <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
@@ -228,12 +228,12 @@
                 </div>
             </div>
         </article>
-<!-- cibo fine-->
-<!-- birra-->
+<!-- cibo fine -->
+<!-- birra -->
         <article class="content" role="tabpanel" aria-hidden="false" id="birra">
             <div class="panel-menu-2n">
                 <div class="row">
-                    <div class="large-12 medium-12 columns">
+                    <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Birre artigianali alla Spina</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
@@ -258,7 +258,7 @@
             </div>
             <div class="panel-menu-n">
                 <div class="row">
-                    <div class="large-12 medium-12 columns">
+                    <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Birre artigianali in bottiglia</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
@@ -346,12 +346,12 @@
                 </div>
             </div>
         </article>
-<!-- birra fine-->
-<!-- vino-->
+<!-- birra fin e-->
+<!-- vino -->
         <article class="content" role="tabpanel" aria-hidden="false" id="vino">
             <div class="panel-menu-n">
                 <div class="row">
-                    <div class="large-12 medium-12 columns">
+                    <div class="large-12 medium-12 columns small-12">
                         <h2 class="subheader">Bollicine</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
@@ -376,7 +376,7 @@
             </div>
             <div class="panel-menu-2n">
                 <div class="row">
-                    <div class="large-12 medium-12 columns">
+                    <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Bianchi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
@@ -401,7 +401,7 @@
             </div>
             <div class="panel-menu-n">
                 <div class="row">
-                    <div class="large-12 medium-12 columns">
+                    <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Rossi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
@@ -425,7 +425,7 @@
                 </div>
             </div>
         </article>
-<!-- vino fine-->
+<!-- vino fine -->
 <!-- drink -->
         <article class="content" role="tabpanel" aria-hidden="true" id="drinks">
             <div class="panel-menu-n">
@@ -576,7 +576,7 @@
             </ul>
         </div>
     </div>
-<!-- fine navbar footer-->
+<!-- fine navbar footer -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.1/js/foundation.min.js"></script>
     <script src="http://beerstrot.it/js/app.min.js"></script>
