--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -92,7 +92,7 @@
                     </article>
                     <article class="row">
                         <div class="medium-12 large-12 columns">
-                            <h2>Un posto stupendo</h2>
+                            <h2>Birre Strepitose</h2>
                             <ul class="clearing-thumbs small-block-grid-2 medium-block-grid-2 large-block-grid-3" data-clearing>
                                 <li>
                                     <a href="http://beerstrot.it/asset/img/large/birreria-panorama.jpg" class="th">
@@ -144,7 +144,7 @@
                </div>
             </div>
         </div>
-                <aside class="medium-4 large-4 columns extra-space-aside-tab-chi-siamo hide-for-small">
+        <aside class="medium-4 large-4 columns extra-space-aside-tab-chi-siamo hide-for-small">
                     <div itemscope itemtype="http://schema.org/Restaurant">
                         <h5>Dove siamo</h5>
                         <h6>
@@ -232,97 +232,6 @@
             </div> 
         </div>
     </div>
-            <div class="row">
-                <div class="medium-8 large-8 columns">
-                    <div class="row">
-                        <div class="medium-12 large-12 columns">
-                            
-                <aside class="medium-4 large-4 columns extra-space-aside-tab-immagini hide-for-small">
-                    <div itemscope itemtype="http://schema.org/Restaurant">
-                        <h5>Dove siamo</h5>
-                        <h6>
-                            <a href="http://maps.apple.com/?q=Via+Centofinestre,+20,+60024+Filottrano+AN" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                                <span itemprop="streetAddress">Via Centofinestre, 20</span>
-                                <br class="hide-for-small">
-                                <span itemprop="postalCode">60024</span>
-                                <span itemprop="addressLocality">Filottrano</span>
-                                <span itemprop="addressRegion">AN</span>
-                                <br class="hide-for-small">
-                                <span class="hide-for-small" itemprop="addressCountry">Italia</span>
-                            </a>
-                        </h6>
-                        <h5 class="extra-space-aside">Orari aperura</h5>
-                        <h6>
-                            <meta itemprop="openingHours" content="Su,Mo,Tu,We,Th 17:00-24:00"><span> Dom&#8202;&ndash;&#8202;Gio: 17:00&#8202;&ndash;&#8202;24:00</span>
-                        </h6>
-                         <h6>
-                            <meta itemprop="openingHours" content="Fr,Sa, 17:00-01:00"><span> Ven&#8202;&ndash;&#8202;Sab: 17:00&#8202;&ndash;&#8202;01:00</span>
-                        </h6>
-                        <h6><em>Chiusi solo il 1 Gennaio</em></h6>
-                        <a role="button" href="#" class="button extra-space-button" data-reveal-id="prenota-online">Prenota un tavolo</a>
-                        <div id="prenota-online" class="reveal-modal" data-reveal>
-                            <a class="close-reveal-modal"> &#215; </a> 
-                            <form action="input">
-                                <div class ="row">
-                                    <div class="small-5 medium-2 large-2 columns">  
-                                        <label>Persone
-                                            <select>
-                                              <option value="1">1</option>
-                                              <option value="2">2</option>
-                                              <option value="3">3</option>
-                                              <option value="4">4</option>
-                                              <option value="5">5</option>
-                                              <option value="6">6</option>
-                                              <option value="7">7</option>
-                                              <option value="8">8</option>
-                                            </select>
-                                          </label>
-                                    </div>
-                                </div>
-                                <div class ="row">
-                                    <div class="small-7 medium-4 large-3 columns">  
-                                        <label>Data
-                                            <input type="date" placeholder="" />
-                                          </label>
-                                    </div>
-                                    <div class="small-5 medium-3 large-2 columns end">  
-                                        <label>Ora
-                                            <input type="time" placeholder="" />
-                                          </label>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="small-12 medium-5 large-6 columns">  
-                                        <label>Nome e Cognome
-                                            <input type="text" placeholder="Nome Cognome" />
-                                        </label>
-                                    </div>
-                                    <div class="small-12  medium-7 large-6 columns end">  
-                                        <label>Email
-                                            <input type="email" placeholder="email" />
-                                          </label>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="small-12 medium-12 large-12 columns">
-                                        <a role="button" href="#" class="button extra-space-button">Prenota e ricevi conferma</a>
-                                    </div> 
-                                </div>
-                            </form>  
-                        </div>
-                        <span class="hide">
-                            <br>
-                            <h5>Categories</h5>
-                            <span itemprop="servesCuisine">Middle Eastern</span>,
-                            <span itemprop="servesCuisine">Mediterranean</span>
-                            <br>
-                            <h5>Price Range</h5>:
-                            <span itemprop="priceRange">$$</span>
-                        </span>
-                    </div>
-                </aside>
-            </div>
-        </section>
 <!-- fine tabbar immagini-->
 <!-- inizio tabbar recensioni-->
         <section role="tabpanel" aria-hidden="false" class="content" id="recensioni">
