--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -148,15 +148,16 @@
                 </ul> 
             </div>
             <div class="medium-6 large-6 columns">
-                <p>Birre Artigianali strepitose, Cibo fantastico, Location incredibile. Non ti basta tutto questo?</p>
-                <p>Serviamo anche ottimo vino, ottimi cocktail (una piccola selezione) e anche pasta... Non ti basta neppure questo?</p> 
-                <p>Facciamo anche musica e spettacoli dal vivo.</p>
+                <p><strong>Birre Artigianali strepitose, Cibo fantastico, Location incredibile.</strong></p>
+                <p>Non ti basta tutto questo? <br>Serviamo anche ottimo vino, ottimi cocktail&mdash;&#8201;una piccola selezione di eccellente qualità&#8201;&mdash; e anche pasta&#8201;&hellip;</p> 
+                <p>Non ti basta neppure questo? <br>Facciamo anche musica e spettacoli dal vivo&hellip; e alette di pollo e costine in bbq. Poi facciamo dolci strepitosi.</p>
+                <p><strong>&hellip; e non siamo cari</strong>!</p>
             </div>
         </div>
     </div>
     <div class="panel-home-n">
         <div class="row">
-            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
+            <div class="medium-6 large-12 columns">
                 <h2>Recensioni</h2>
             </div>
         </div>
@@ -166,85 +167,84 @@
                 <a role="button" href="#" class="button extra-space-button" data-reveal-id="recensione-reveal">Scrivi una recensione
                 </a>
                 <div id="recensione-reveal" class="reveal-modal" data-reveal>
-                    <form action="input">
+                    <div id="TA_cdswritereviewlg95" class="TA_cdswritereviewlg">
+                        <ul id="LeFVftT" class="TA_links DF7eO8hGYA">
+                            <li id="6cQyEIcGSb" class="JTcffh">
+                            <a target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/img2/branding/medium-logo-12097-2.png" alt="TripAdvisor"/></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <script src="http://www.jscache.com/wejs?wtype=cdswritereviewlg&amp;uniq=95&amp;locationId=2373449&amp;lang=it&amp;border=false&amp;display_version=2"></script>
+                    <a class="close-reveal-modal">&#215;</a>
+                </div>
+                <article class="row">  
+                    <div class="medium-12 large-12 columns">
+                        <h4><em>Ti stiamo aspettando!</em></h4>
+                        <h6 class="by-line">Scritto il 12 Aprile 2015</h6>  
+                        <blockquote cite="">Abbiamo appena aperto, è normale non ci siano recensioni. Vuoi essere il primo?<cite>Andrea</cite></blockquote>
+                    </div> 
+                </article>
+            </div>    
+            <div class="medium-6 large-6 columns">
+                <span class="extra-space show-for-small"></span>
+                <h3>Cosa dice la stampa</h3>
+                <a role="button" href="#" class="button extra-space-button" data-reveal-id="press-kit">Richiedi il Media Kit</a>
+                <div id="press-kit" class="reveal-modal" data-reveal>
+                    <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=5b473ef5a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate class="extra-space-text-tab-contatti">
                         <div class="row">
-                            <div class="small-10 medium-7 large-5 columns">  
-                                <label>Nome e Cognome
-                                    <input type="text" placeholder="Nome Cognome" />
+                            <div class="small-6 medium-5 columns">  
+                                <label>Nome
+                                    <input type="text" name="FNAME" class="required" id="mce-FNAME" placeholder="Nome"/>
+                                </label>
+                            </div>
+                            <div class="small-6 medium-5 columns end">  
+                                <label>Cognome
+                                    <input type="text" name="LNAME" class="required" id="mce-LNAME" placeholder="Cognome" />
                                 </label>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="small-12  medium-7 large-5 columns">  
+                            <div class="small-12  medium-8 columns end">  
                                 <label>Email
-                                    <input type="email" placeholder="esempio@esempio.it" />
+                                    <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="esempio@esempio.it" />
                                   </label>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="small-12  medium-9 large-7 columns end">  
-                                <label>Recensione:
-                                    <textarea placeholder="Scrivi una recensione"></textarea>
+                        <div class="row"> 
+                            <div class="small-6  medium-5 columns">  
+                                <label>Telefono
+                                    <input type="tel" name="MMERGE3" class="required" id="mce-MMERGE3" placeholder="telefono" />
+                                </label>
+                            </div>
+                            <div class="small-6 medium-5 columns end">
+                                <label>Professione
+                                    <select name="MMERGE4" class="required" id="mce-MMERGE4">
+                                        <option value=""></option>
+                                        <option value="Blogger">Blogger</option>
+                                        <option value="Giornalista">Giornalista</option>
+                                        <option value="Altro">Altro</option>
+                                    </select>
                                   </label>
-                            </div>
+                              </div>
                         </div>
                         <div class="row">
-                            <div class="small-12 medium-12 large-12 columns">
-                                <a role="button" href="#" class="button extra-space-button">Posta la recensione</a>
+                            <div style="position: absolute; left: -5000px;">
+                                <input type="text" name="b_c0625e76a6851e01d891842f0_5b473ef5a4" tabindex="-1" value="">
+                            </div>
+                            <div class="small-12 medium-12 columns">
+                                <input type="submit" value="Iscriviti e Scarica il Press Kit" name="subscribe" id="mc-embedded-subscribe" class="button extra-space-button">
                             </div>
                         </div>
-                    </form>
-                    <a class="close-reveal-modal">&#215;</a>
+                        <a class="close-reveal-modal">&#215;</a>
+                    </form>               
                 </div>
-            </div>    
-            <div class="medium-6 large-6 columns">
-                <h3>Cosa dice la stampa</h3>
-                <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=5b473ef5a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate class="extra-space-text-tab-contatti">
-                    <div class="row">
-                        <div class="small-6 medium-5 columns">  
-                            <label>Nome
-                                <input type="text" name="FNAME" class="required" id="mce-FNAME" placeholder="Nome"/>
-                            </label>
-                        </div>
-                        <div class="small-6 medium-5 columns end">  
-                            <label>Cognome
-                                <input type="text" name="LNAME" class="required" id="mce-LNAME" placeholder="Cognome" />
-                            </label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="small-12  medium-8 columns end">  
-                            <label>Email
-                                <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="esempio@esempio.it" />
-                              </label>
-                        </div>
-                    </div>
-                    <div class="row"> 
-                        <div class="small-6  medium-5 columns">  
-                            <label>Telefono
-                                <input type="tel" name="MMERGE3" class="required" id="mce-MMERGE3" placeholder="telefono" />
-                            </label>
-                        </div>
-                        <div class="small-6 medium-5 columns end">
-                            <label>Professione
-                                <select name="MMERGE4" class="required" id="mce-MMERGE4">
-                                    <option value=""></option>
-                                    <option value="Blogger">Blogger</option>
-                                    <option value="Giornalista">Giornalista</option>
-                                    <option value="Altro">Altro</option>
-                                </select>
-                              </label>
-                          </div>
-                    </div>
-                    <div class="row">
-                        <div style="position: absolute; left: -5000px;">
-                            <input type="text" name="b_c0625e76a6851e01d891842f0_5b473ef5a4" tabindex="-1" value="">
-                        </div>
-                        <div class="small-12 medium-12 columns">
-                            <input type="submit" value="Iscriviti e Scarica il Press Kit" name="subscribe" id="mc-embedded-subscribe" class="button extra-space-button">
-                        </div>
-                    </div>
-                </form>                
+                <article class="row">  
+                    <div class="medium-12 large-12 columns">
+                        <h4><em>Ti stiamo aspettando!</em></h4>
+                        <h6 class="by-line">Scritto il 12 Aprile 2015</h6>  
+                        <blockquote cite="">Abbiamo appena aperto, è normale non ci siano recensioni. Vuoi essere il primo?<cite>Andrea</cite></blockquote>
+                    </div> 
+                </article> 
             </div>
         </div>
     </div>
@@ -398,7 +398,7 @@
         </section> -->
 <!-- fine tabbar recensioni-->        
 <!-- inizio footer -->
-    <footer class="panel-prefooter extra-space-footer">
+    <footer class="panel-prefooter">
         <div class="row">
             <div class="large-6 medium-6 columns">
                 <h4 class="subheader">Fai parte della community</h4>
