--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <link rel="canonical" href="http://beerstrot.it/chi-siamo/"/>
-    <link rel="stylesheet" href="../css/app.css"/>
+    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -43,10 +43,10 @@
     <header class="row">
         <div class="medium-12 large-12 columns">
             <h1>Chi Siamo</h1>
-            <br>
+            <hr>
         </div>
     </header>
-    <div class="panel-home-n">
+    <div class="panel-chi-0">
         <div class="row">
             <div class="medium-12 large-12 columns">
                 <h2>Team</h2>
@@ -180,7 +180,7 @@
                 <article class="row">  
                     <div class="medium-12 large-12 columns">
                         <h4><em>Ti stiamo aspettando!</em></h4>
-                        <h6 class="by-line">Scritto il 12 Aprile 2015</h6>  
+                        <h6 class="by-line">Scritto il 25 Aprile 2015</h6>  
                         <blockquote cite="">Abbiamo appena aperto, è normale non ci siano recensioni. Vuoi essere il primo?<cite>Andrea</cite></blockquote>
                     </div> 
                 </article>
@@ -241,7 +241,7 @@
                 <article class="row">  
                     <div class="medium-12 large-12 columns">
                         <h4><em>Ti stiamo aspettando!</em></h4>
-                        <h6 class="by-line">Scritto il 12 Aprile 2015</h6>  
+                        <h6 class="by-line">Scritto il 25 Aprile 2015</h6>  
                         <blockquote cite="">Abbiamo appena aperto, è normale non ci siano recensioni. Vuoi essere il primo?<cite>Andrea</cite></blockquote>
                     </div> 
                 </article> 
